# qa-guru-hw17

./: pyproject.toml
