[tool.poetry]
name = "qa-guru-hw17"
version = "0.1.0"
description = "qa-guru-hw17 homework"
authors = ["Xalios <mastep@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
